syntax = "proto3";

service Raft {
    rpc AppendLog(AppendLogRequest) returns (AppendLogResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc QueryLog(QueryLogRequest) returns (QueryLogResponse);
}

message AppendLogRequest {
    string action = 1;
    string key = 2;
    string value = 3;
}

message AppendLogResponse {
    bool success = 1;
    string message = 2;
}

message RequestVoteRequest {
    int64 term = 1;
    string candidate_id = 2;
}

message RequestVoteResponse {
    bool vote_granted = 1;
    string message = 2;
}

message HeartbeatRequest {
    int64 term = 1;
    string leader_id = 2;
}

message HeartbeatResponse {
    bool success = 1;
}

message QueryLogRequest {
    string action = 1;
}

message QueryLogResponse {
    string status = 1;
    string logs = 2;
}
